--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <input type="text" id="streetAddress" class="form-control" />
           </div>
           <div class="form-group">
-            <label id="city">City</label>
+            <label for="city">City</label>
             <input type="text" id="city" class="form-control" />
           </div>
           <div class="form-row">
